--- a/style/architects.css
+++ b/style/architects.css
@@ -83,3 +83,34 @@ nav li a{
             flex-direction: column;
         }
     }
+
+    /* main start style */
+    main{
+        max-width: 1440px;
+        margin: 0 auto;
+    }
+    /* teams style */
+    .teams-container{
+        display: flex;
+        align-items: center;
+    }
+    .tem-img-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 24px;
+    }
+    .teams-content{
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+    .teames-title{
+        font-size: 2.8rem;
+    }
+    .teames-title .quick-list{
+        color: #727272;
+        font-weight: 500;
+    }
+    .teames-title .text-features{
+        color: #FF900E;
+        font-weight: 700;
+    }
