--- a/style/architects.css
+++ b/style/architects.css
@@ -4,6 +4,9 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+.text-lihgt-gray{
+    color: #727272;
+}
 
 .btn-primary{
     border-radius: 8px;
@@ -56,38 +59,18 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
-    color: #727272;
-}
+
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
 
-    /* responsive media queries */
-    /* mobail devices */
-    @media screen and (max-width:576px) {
-        header{
-            padding: 20px;
-        }
-        nav{
-            flex-direction: column;
-        }
-    }
-    /* tablet or medium devices */
-    @media screen and (min-width:576px){
-        header{
-            padding: 50px;
-        }
-        nav{
-            flex-direction: column;
-        }
-    }
+ 
 
     /* main start style */
     main{
         max-width: 1440px;
-        margin: 0 auto;
+        margin: 70px auto;
     }
     /* teams style */
     .teams-container{
@@ -114,3 +97,29 @@ nav li a{
         color: #FF900E;
         font-weight: 700;
     }
+
+
+
+    /* responsive media queries */
+    /* mobail devices */
+    @media screen and (max-width:576px) {
+        header{
+            padding: 20px;
+        }
+        nav, .teams-container{
+            flex-direction: column;
+        }
+        .tem-img-container{
+            grid-template-columns: 1fr;
+        }
+    }
+    tablet or medium devices
+    @media screen and (min-width:576px){
+        header{
+            padding: 50px;
+        }
+        nav, .teams-container{
+            flex-direction: column;
+        }
+    }
+
